--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -358,15 +358,21 @@ function change_cart_before_post(){
   let cart_text = cart_span.innerText;
 
   let final_price = document.getElementById('the_price').innerText;
-  final_price = '$' + final_price.slice(7, final_price.length);
+  final_price = parseFloat(final_price.slice(7, final_price.length));
 
   if(cart_text.slice(1,6) == 'Cart'){
-    cart_span.innerHTML = '&nbsp;Cart 1, ' + final_price;
+    cart_span.innerHTML = '&nbsp;Cart 1, $' + final_price;
   } else {
+    //Update total price count
+    let total_price = cart_text.slice(cart_text.indexOf(',') + 3, cart_text.length);
+    total_price = parseFloat(total_price)
+    total_price += final_price
+
+    //Update item count
     let cur_item_count = cart_text.slice(6, cart_text.indexOf(','));
     cur_item_count = parseInt(cur_item_count, 10);
     cur_item_count++;
-    cart_span.innerHTML = '&nbsp;Cart ' + cur_item_count + ', ' + final_price; 
+    cart_span.innerHTML = '&nbsp;Cart ' + cur_item_count + ', $' + total_price; 
   }
 }
 
