--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -367,6 +367,7 @@ function change_cart_before_post(){
     let total_price = cart_text.slice(cart_text.indexOf(',') + 3, cart_text.length);
     total_price = parseFloat(total_price)
     total_price += final_price
+    total_price = Number((total_price).toFixed(2));
     total_price = total_price.toString();
     if(total_price[total_price.length - 2] == '.'){
       total_price += '0';
