--- a/nickdima/silk_thai/template/checkout/order_confirmation.html
+++ b/nickdima/silk_thai/template/checkout/order_confirmation.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  {% include 'universal.html' %}
-  <meta name="description" content="Web Maker Description">
-  <title>Confirmation Page</title>
-  {% include 'universal-css-links.html' %}
+<html>
 
+<head>
+    <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
+    {% include 'universal.html' %}
+    <meta name="description" content="Web Maker Description">
+    <title>Confirmation Page</title>
+    {% include 'universal-css-links.html' %}
 
 </head>
+
 <body>
-<!--Navigation bar-->
-{% include 'nav.html' %}
-<!--End navigation bar-->
+    <!--Navigation bar-->
+    {% include 'nav.html' %}
+    <!--End navigation bar-->
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="header11 cid-r0R4aaf7m2" id="header11-l">
+    <section class="engine"><a href="https://mobiri.se/l">free web templates</a></section>
+    <section class="header11 cid-r0R4aaf7m2" id="header11-l">
 
-    <!-- Block parameters controls (Blue "Gear" panel) -->
+        <!-- Block parameters controls (Blue "Gear" panel) -->
 
-    <!-- End block parameters -->
+        <!-- End block parameters -->
 
 
-    <div class="container align-left">
-        <div class="media-container-column mbr-white col-md-12">
-            <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5">
-                Thank You For Ordering!</h3>
-            <h1 class="mbr-section-title py-3 mbr-fonts-style display-1">Your Order Should Be Ready In: &lt;&gt; Minutes</h1>
-            <p class="mbr-text py-3 mbr-fonts-style display-5">If you enjoyed your experience, please leave feedback!</p>
-            <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="{{ url_for('homepage.contact') }}">Feedback</a>
+        <div class="container align-left">
+            <div class="media-container-column mbr-white col-md-12">
+                <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5">
+                    Thank You For Ordering!</h3>
+                <h1 class="mbr-section-title py-3 mbr-fonts-style display-1">Your Order Should Be Ready In: &lt;&gt; Minutes</h1>
+                <p class="mbr-text py-3 mbr-fonts-style display-5">If you enjoyed your experience, please leave feedback!</p>
+                <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="{{ url_for('homepage.contact') }}">Feedback</a>
                     <a class="btn btn-md btn-white-outline display-4" href="{{ url_for('menu.menu') }}">Back To Menu</a></div>
+            </div>
         </div>
-    </div>
 
 
-</section>
+    </section>
 
 
-{% include 'universal-bottom.html' %}
+    {% include 'universal-bottom.html' %}
 
-  <script src="{{ url_for('checkout.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/popper/popper.min.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/tether/tether.min.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/dropdown/js/script.min.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
-  <script src="{{ url_for('checkout.static', filename='assets/theme/js/script.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/popper/popper.min.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/tether/tether.min.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/dropdown/js/script.min.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
+    <script src="{{ url_for('checkout.static', filename='assets/theme/js/script.js') }}"></script>
 
 
 </body>
+
 </html>
