--- a/nickdima/silk_thai/template/homepage/feedback_form.html
+++ b/nickdima/silk_thai/template/homepage/feedback_form.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
-  <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  {% include 'universal.html' %}
-  <meta name="description" content="Web Site Builder Description">
-  <title>Contact Form</title>
-  {% include 'universal-css-links.html' %}
+    <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
+    {% include 'universal.html' %}
+    <meta name="description" content="Web Site Builder Description">
+    <title>Contact Form</title>
+    {% include 'universal-css-links.html' %}
 
 
 
 </head>
+
 <body>
-<!--Navigation bar-->
-{% include 'nav.html' %}
-<!--End navigation bar-->
+    <!--Navigation bar-->
+    {% include 'nav.html' %}
+    <!--End navigation bar-->
 
-<section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section><section class="mbr-section form1 cid-r0R0kgQIUg" id="form1-g">
+    <section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section>
+    <section class="mbr-section form1 cid-r0R0kgQIUg" id="form1-g">
 
 
 
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-12 col-lg-8">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    CONTACT FORM
-                </h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Tell Us What You Think!</h3>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="title col-12 col-lg-8">
+                    <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
+                        CONTACT FORM
+                    </h2>
+                    <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Tell Us What You Think!</h3>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="media-container-column col-lg-8" data-form-type="formoid">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
@@ -67,24 +70,25 @@
                             <button href="" type="submit" class="btn btn-primary btn-form display-4">SEND FORM</button>
                         </span>
                     </form>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
-{% include 'universal-bottom.html' %}
+    {% include 'universal-bottom.html' %}
 
-  <script src="{{ url_for('homepage.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/popper/popper.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/tether/tether.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/dropdown/js/script.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/theme/js/script.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/formoid/formoid.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/popper/popper.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/tether/tether.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/dropdown/js/script.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/theme/js/script.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/formoid/formoid.min.js') }}"></script>
 
 
 </body>
+
 </html>
