--- a/nickdima/silk_thai/template/homepage/home.html
+++ b/nickdima/silk_thai/template/homepage/home.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
-<html >
+<html>
+
 <head>
-  <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  {% include 'universal.html' %}
-  <meta name="description" content="">
-  <title>Home</title>
-  {% include 'universal-css-links.html' %}
+    <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
+    {% include 'universal.html' %}
+    <meta name="description" content="">
+    <title>Home</title>
+    {% include 'universal-css-links.html' %}
 
 
 
 </head>
+
 <body>
- <!--Navigation bar-->
-{% include 'nav.html' %}
-<!--End navigation bar-->
+    <!--Navigation bar-->
+    {% include 'nav.html' %}
+    <!--End navigation bar-->
 
-<section class="engine"><a href="https://mobiri.se/z">best css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
-
-
-
-
-
-    <div class="container align-center">
-        <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Authentic Thai Food In Charlottesville</h1>
+    <section class="engine"><a href="https://mobiri.se/z">best css templates</a></section>
+    <section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
 
 
+
+
+        <div class="container align-center">
+            <div class="row justify-content-md-center">
+                <div class="mbr-white col-md-10">
+                    <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Authentic Thai Food In Charlottesville</h1>
+
+
+
+                </div>
             </div>
         </div>
-    </div>
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-        <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-    </div>
-</section>
+        <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+            <a href="#next">
+                <i class="mbri-down mbr-iconfont"></i>
+            </a>
+        </div>
+    </section>
 
-{% include 'universal-bottom.html' %}
+    {% include 'universal-bottom.html' %}
 
 
-  <script src="{{ url_for('homepage.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/popper/popper.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/tether/tether.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/dropdown/js/script.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/parallax/jarallax.min.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
-  <script src="{{ url_for('homepage.static', filename='assets/theme/js/script.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/popper/popper.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/tether/tether.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/dropdown/js/script.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/parallax/jarallax.min.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
+    <script src="{{ url_for('homepage.static', filename='assets/theme/js/script.js') }}"></script>
 
 
 </body>
+
 </html>
