--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -1,4 +1,4 @@
- <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-a">
+<section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-a">
     <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -12,14 +12,15 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="{{ url_for('homepage.home') }}">
-                         <img src="{{ url_for('homepage.static', filename='assets/images/silk_thai_transparent.png') }}" alt="Mobirise" style="height: 3.8rem;">
+                        <img src="{{ url_for('homepage.static', filename='assets/images/silk_thai_transparent.png') }}" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ url_for('homepage.home') }}">Thai Charlottesville</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Menu</span></a>
                 </li>
@@ -27,13 +28,14 @@
                     <a class="nav-link link text-white display-4" href="{{ url_for('homepage.about') }}">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn">About Us</span>
                     </a>
-                </li></ul>
+                </li>
+            </ul>
 
             <div class="navbar-buttons mbr-section-btn">
                 <a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}">
                     <span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>
                     <div id="cart_nav">&nbsp;Cart
-                    {% if session['total'] is defined %} {{session['total'][1]}}, ${{session['total'][0]}}{% endif %}
+                        {% if session['total'] is defined %} {{session['total'][1]}}, ${{session['total'][0]}}{% endif %}
                     </div>
                 </a>
             </div>
