fixed html titles

--- a/nickdima/silk_thai/template/checkout/order_confirmation.html
+++ b/nickdima/silk_thai/template/checkout/order_confirmation.html
@@ -5,7 +5,7 @@
     <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
     {% include 'universal.html' %}
     <meta name="description" content="Web Maker Description">
-    <title>Confirmation Page</title>
+    <title>Confirmation</title>
     {% include 'universal-css-links.html' %}
 
 </head>
