--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -5,7 +5,7 @@
     <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
     {% include 'universal.html' %}
     <meta name="description" content="A menu of the food at Thai Charlottesville">
-    <title>Menu</title>
+    <title>Customization</title>
 
     {% include 'universal-css-links.html' %}
 </head>
