changed homepage background

--- a/nickdima/silk_thai/static/assets/mobirise/css/mbr-additional.css
+++ b/nickdima/silk_thai/static/assets/mobirise/css/mbr-additional.css
@@ -1754,7 +1754,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/thai-som-tum.jpg-1600x900.jpg");
+  background-image: url("../../../assets/images/socialimg.jpg");
 }
 .cid-qTkA127IK8 H1 {
   color: #073b4c;
