--- a/nickdima/silk_thai/template/homepage/home.html
+++ b/nickdima/silk_thai/template/homepage/home.html
@@ -19,7 +19,14 @@
 
     <section class="engine"><a href="https://mobiri.se/z">best css templates</a></section>
     <section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
-
+        <!--
+        cid-qTkA127IK8 class
+        location: /assets/mobirise/css/mbr-additional.css
+        Background image: "mbr-additional.css
+        .cid-qTkA127IK8 {
+          background-image: url("../../../assets/images/thai-som-tum.jpg-1600x900.jpg");
+        }"
+         -->
 
 
 
