added white font

--- a/nickdima/silk_thai/static/assets/mobirise/css/mbr-additional.css
+++ b/nickdima/silk_thai/static/assets/mobirise/css/mbr-additional.css
@@ -1757,7 +1757,7 @@ body {
   background-image: url("../../../assets/images/socialimg.jpg");
 }
 .cid-qTkA127IK8 H1 {
-  color: #073b4c;
+  color:  #FFFFFF /*#073b4c  Dark blue*/);
 }
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
