--- a/nickdima/silk_thai/template/homepage/home.html
+++ b/nickdima/silk_thai/template/homepage/home.html
@@ -34,7 +34,8 @@
         <div class="container align-center">
             <div class="row justify-content-md-center">
                 <div class="mbr-white col-md-10">
-                    <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Authentic Thai Food In Charlottesville</h1>
+                    <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Authentic Thai Food In Charlottesville
+                    </h1>
 
 
 
