--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -65,17 +65,11 @@
                                       function changePrice() {
                                           //Check IDs 'topping' 'extra' 'extra_rice'
                                           {% if portion == 'dinner' %}
-                                          let base_price = 
-                                              {
-                                                  selected_item['Base Price']
-                                              };
+                                          let base_price = {{selected_item['Base Price']}};
 
                                           {% else %}
-                                          let base_price =
-                                              {
-                                                  selected_item['Lunch_Version']['Base Price']
-                                              };
-
+                                          
+                                          let base_price = {{selected_item['Lunch_Version']['Base Price']}};
 
                                           {% endif %}
 
