--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -189,6 +189,7 @@
                                             <textarea name="custom_modify" rows="5" cols="20" placeholder="Exclusions, notes, etc."></textarea>
 
                                             <input type="hidden" id="modal-dest" name="modal-dest" value="to_cart">
+                                            <input type="hidden" id="potion_type" name="potion_type" value="{{ portion }}">
                                         </form>
                                     </div>
 
