accidently overwrite portion

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -54,7 +54,7 @@
                             {% endif %}
                             {% if item['Portion'] != false %}
                             <p class="mbr-fonts-style display-6">
-                                Portion: {{item['Portion']}}</p>
+                                Portion: {{item['Portion_Type']}}</p>
                             {% endif %}
                             {% if item['Notes'] != false %}
                             <p class="mbr-fonts-style display-6">
