added hours of operation

--- a/nickdima/silk_thai/template/universal-bottom.html
+++ b/nickdima/silk_thai/template/universal-bottom.html
@@ -24,6 +24,18 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
+                    Hours
+                </h5>
+                <p class="mbr-text">Sun  11AM–9:30PM</p>
+                <p class="mbr-text">Mon  11AM–9:30PM</p>
+                <p class="mbr-text">Tue  11AM–9:30PM</p>
+                <p class="mbr-text">Wed  11AM–9:30PM</p>
+                <p class="mbr-text">Thu  11AM–9:30PM</p>
+                <p class="mbr-text">Fri  11AM–10:30PM</p>
+                <p class="mbr-text">Sat  11AM–10:30PM</p>
+            </div>
+            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                <h5 class="pb-3">
                     Links
                 </h5>
                 <p class="mbr-text">Digital Menu <a href="#">PDF</a><br></p>
@@ -33,7 +45,6 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.9100175649683!2d-78.51731454833019!3d38.02587717961492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b38660b203964d%3A0xa8820769c38e106!2s2210+Fontaine+Ave%2C+Charlottesville%2C+VA+22903!5e0!3m2!1sen!2sus!4v1528226085788" width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
-
 
         <!--
         <div class="footer-lower">
