--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -152,7 +152,7 @@
                             <br>
                         </p>
 
-                        <button href="" type="submit" class="btn btn-primary display-4">Submit Order</button>
+                        <button href="" type="submit" class="btn btn-primary display-4">Continue Checkout</button>
                     </form>
                 </div>
             </div>
