--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -22,6 +22,10 @@
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Free Delivery Within 2 Miles - $20 Min</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Menu</span></a>
                 </li>
                 <li class="nav-item">
