--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -16,14 +16,11 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ url_for('homepage.home') }}">Thai Charlottesville</a></span>
+                <span class="navbar-caption-wrap">Free Delivery Within 2 Miles ($20min)</span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Free Delivery Within 2 Miles - $20 Min</span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Menu</span></a>
