white font on nav

--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -16,7 +16,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ url_for('homepage.home') }}">Thai Charlottesville</a></span>
-                <span class="navbar-caption-wrap">Free Delivery Within 2 Miles ($20min)</span>
+                <span class="navbar-caption-wrap text-white">Free Delivery Within 2 Miles ($20min)</span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
