--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                 <li class="nav-item">
-                    <span class="text-white display-4">Free Delivery Within 2miles | $20min</span>
+                    <span class="text-white display-4">Free Delivery Within 2miles | $20min<br></span>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
