remove id exists now

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -60,9 +60,9 @@
                             <p class="mbr-fonts-style display-6">
                                 Notes: {{item['Notes']}}</p>
                             {% endif %}
-                            <form name='remove_id' method='POST' action='{{ url_for("checkout.cart_remover") }}'>
-                                <input type='hidden' value='{{ item["Id"] }}'>
-                                <input type='submit' value='Remove'>
+                            <form class="mbr-fonts-style display-6" method='POST' action='{{ url_for("checkout.cart_remover") }}'>
+                                <input type='hidden' name='remove_id' value='{{ item["Id"] }}'>
+                                <input type='submit' class="btn btn-primary display-6" value='Remove'>
                             </form>
                         </div>
                         <div class="item-role px-2">
